# oosf

./: CMakeLists.txt  LICENSE  main.cpp
include/: input_data_stream.h  log.h  output_data_stream.h  types.h
